# open62541-performance

./: CMakeLists.txt  README.md
src/: read-speed-client.c  read-speed-server.c
